# job_management

./: CMakeLists.txt  README.md
include/: job.h  job_manager.h  types.h  utilities.h
src/: job.cpp  job_manager.cpp  main.cpp  types.cpp  utilities.cpp
